   - Remove Provides.
   - Depends on libplist++1 for libplist++-dev, instead of libplist1
     (LP: #600338)
   - Fix typo in description (Closes: #620864).
  * debian/python-plist.preinst:
   - Remove after Squeeze release.
  * debian/rules:
   - Use dh --with python2.
   - Parse only the default python version, we can only pass 1 version to
     configure.

 -- Julien Lavergne <gilir@ubuntu.com>  Thu, 24 Mar 2011 22:26:38 +0100

libplist (1.4-1) unstable; urgency=medium

  * New upstream release.
  * debian/rules:
   - Remove additional CFLAGS to pass correct flags.
   - Add additional LDFLAGS.
   - Use filter instead of findstring to find noopt.
   - Build and clean doxygen documentation.
  * debian/libplist++1.symbols.amd64
   - Removed, since symbols are too unstable and easily FTBFS the package.
     Closes: #605846, #615661, #618150
  * Set urgency to medium to fix RC bug.
  * debian/watch:
   - Update location of the tarballs.
  * debian/docs
   - Add general documentation files.
  * debian/copyright:
   - Update to DEP5 format.
  * debian/01-libs.private.patch:
   - Update.
  * debian/libplist-doc.doc-base & debian/libplist.install:
   - Install libplist documentation.
  * debian/control:
   - Build-depends on doxygen for documentation support.
   - Add libplist-doc binary.
   - Replace references to libiphone by libimobiledevice.

 -- Julien Lavergne <julien.lavergne@gmail.com>  Mon, 21 Mar 2011 17:36:21 +0100

libplist (1.3-2) unstable; urgency=low

  * debian/rules:
   - Run the test suit for all arches.
   - Pass -g to CFLAGS (Closes: #579119).
  * debian/README.Debian:
   - Remove since we run the test suit on all arches.
  * debian/watch:
   - Fix the detection of the version, thanks Paul McEnery.
  * debian/control:
   - Wrap build-depends and depends.
   - Bump Standards-Version to 3.9.1.0, no changes needed.

 -- Julien Lavergne <julien.lavergne@gmail.com>  Mon, 08 Nov 2010 01:24:15 +0100

libplist (1.3-1) unstable; urgency=low
